[metadata]
name = ravel
author = David Eyk
author-email = david@worldsenoughstudios.com
summary = Yet another framework for choice-based interactive fiction.
version=0.1.dev0
license = MIT
description-file = README.rst
requires-python = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir=
    =src
packages=find:
install_requires =
    attrs
    awesome-slugify
    blinker
    click
    colorclass
    marshmallow
    parsimonious
    path
    pydash
    straight.plugin
    strictyaml
    syml

[options.packages.find]
where=src

[files]
packages =
    ravel


[options.entry_points]
console_scripts =
    ravel = ravel.cli:main


[flake8]
exclude =
        .git,
        venv,
        dist,
        __pycache__,
max-line-length = 120
ignore =
       W503, # line break occurred before a binary operator
       E203, # whitespace before ':'
